# qcog-python-client

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  model.pt  model.py  pyproject.toml  requirements-dev.txt  schema.py  test.tar
.github/actions/build-schema/: action.yaml
.github/actions/bumpversion/: action.yml
.github/actions/integration_tests/: action.yaml
.github/actions/pushversion/: action.yml
.github/actions/python-build/: action.yml
.github/actions/setup_and_lint/: action.yml
.github/actions/setup_lint_and_test/: action.yml
.github/actions/test/: action.yml
.github/actions/upload-wheel/: action.yml
.github/workflows/: all_push.yml  build.yml  merge_to_develop.yml  on_pr.yml  pypi.yml
docs/: conf.py  index.rst  requirements.txt
docs/api/: async_client.rst  base_client.rst  client.rst
docs/examples/: coil20.rst  mnist.rst  timeseries.rst  wisconsin.rst  xyz.rst
docs/examples/pytorch/: index.rst  mnist.rst
docs/examples/stand_alone/: coil20.rst  index.rst  timeseries.rst
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/html/_sources/api/: async_client.rst.txt  client.rst.txt
docs/html/_sources/examples/: timeseries.rst.txt
docs/html/api/: async_client.html  base_client.html  client.html
docs/html/examples/: coil20.html  timeseries.html  wisconsin.html
docs/html/models/: ensemble.html  pauli.html
docs/html/parameters/: optimization.html  state.html
docs/html/tutorial/: datasets.html  inference.html  install.html  models.html  training.html
docs/models/: ensemble.rst  general.rst  pauli.rst
docs/models/pytorch/: qcml_layer.rst
docs/models/stand_alone/: ensemble.rst
docs/parameters/: optimization.rst  state.rst
docs/source/: index.rst
docs/tutorial/: datasets.rst  inference.rst  install.rst  models.rst  training.rst  training_parameters.rst
docs/tutorial/pytorch/: index.rst  inference.rst  models.rst  train.rst
docs/tutorial/stand_alone/: index.rst  inference.rst  models.rst
examples/: forecast_test.py  inference_test.py  parameters_test.py  small0.json  test_examples.py  train_test.py
model.py/_monitor_/: __init__.py  _wandb.py  interface.py
qcog_python_client/: __init__.py  _jsonable_parameters.py  client.py  common.py  ensemble.py  log.py  model.py  pauli.py  qcog.py
qcog_python_client/monitor/: __init__.py  _wandb.py  interface.py
qcog_python_client/qcog/: __init__.py  _base64utils.py  _baseclient.py  _data_uploader.py  _httpclient.py  _interfaces.py  _jsonable_parameters.py  _qcogasync.py  _qcogsync.py  _status.py  _version.py  httpclient.py  qcogasync.py  qcogsync.py
qcog_python_client/qcog/pytorch/: __init__.py  _discover.py  _upload.py  _validate.py  agent.py  handler.py  types.py  utils.py
qcog_python_client/qcog/pytorch/discover/: __init__.py  _discover.py  discoverhandler.py  types.py  utils.py
qcog_python_client/qcog/pytorch/parameters/: _saveparameters.py  paramshandler.py
qcog_python_client/qcog/pytorch/train/: _dry_run.py  _train.py  localtrain_pt.py  trainhandler.py
qcog_python_client/qcog/pytorch/upload/: __init__.py  _upload.py  uploadhandler.py  utils.py
qcog_python_client/qcog/pytorch/validate/: __init__.py  _setup_monitor_import.py  _validate.py  _validate_model_module.py  _validate_module.py  shared.py  utils.py  validate_utils.py  validatehandler.py
qcog_python_client/schema/: __init__.py  common.py  ensemble.py  general.py  parameters.py  pauli.py
tests/: datasets.py  test_example_1.py  test_example_2.py  test_examples.py  test_parameters.py  test_pytorch_agent.py
tests/integration/: bootstrap.py  conftest.py  test_client.py  waitservice.py
tests/integration/test_pytorch/: test_pytorch_model.py
tests/pytorch_model/: _model.py  _private.py  model.py  ubiops_train_pt.py
tests/unit/qcog/pytorch/discover/: test_discover_handler.py
tests/unit/qcog/pytorch/validate/: test_setup_monitor_import.py  test_utils.py
