[build-system]
requires = [
  "setuptools>=64",
  "build",
  "setuptools_scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "qcog_python_client"
readme = "README.md"
description = "qcog python client"
dependencies = [
  "requests",
  "pandas",
  "numpy",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "build",
  "mypy",
  "flake8",
  "pytest",
  "pandas-stubs",
  "types-requests",
  "setuptools>=64",
  "setuptools_scm[toml]>=8",
]

[tool.setuptools_scm]
version_file = "qcog_python_client/__version__.py"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true

# Needed because of bug in MyPy
disallow_subclassing_any = false

mypy_path = "stubs"

disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

exclude = []
