[build-system]
requires = [
  "setuptools>=64",
  "build",
  "setuptools_scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "qcog_python_client"
readme = "README.md"
description = "qcog python client"
dependencies = [
  "requests",
  "pandas",
  "numpy",
  "aiohttp",
  "pydantic",
  "typing_extensions",
  "pydantic-settings",
  "anyio",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "build",
  "mypy",
  "ruff",
  "pytest",
  "pandas-stubs",
  "types-requests",
  "setuptools_scm[toml]>=8",
  "sphinx",
  "sphinx_rtd_theme",
  "pydantic-settings",
  "datamodel-code-generator",
  "pytest-asyncio",
  "pytest-cov",
  "testcontainers",
]
examples = [
  "scikit-learn",
  "torch",
  "pillow",
]
wandb = [
  "wandb",
]

[tool.setuptools_scm]
version_file = "qcog_python_client/__version__.py"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true

# Needed because of bug in MyPy
disallow_subclassing_any = false

mypy_path = "stubs"

disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

exclude = ["generated_schema", "docs"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "generated_schema",
    "docs",
]

line-length = 88
indent-width = 4

target-version="py38"

[tool.ruff.lint]

# Ruff Rules https://docs.astral.sh/ruff/rules/
# F - PyFlakes (https://docs.astral.sh/ruff/rules/#pyflakes-f)
# E, W - pycodestyle (https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
# I  - Isort (https://docs.astral.sh/ruff/rules/#isort-i)
# N - PEP-8 Naming (https://docs.astral.sh/ruff/rules/#pep8-naming-n)
# D - pydocstyle (https://docs.astral.sh/ruff/rules/#pydocstyle-d)
# YTT - flake8-2020 (https://docs.astral.sh/ruff/rules/#flake8-2020-ytt)
# ASYNC flake8-async (https://docs.astral.sh/ruff/rules/#flake8-async-async)

select = ["F", "E", "W", "I", "N", "D", "YTT", "ASYNC"]

exclude = [
  "generated_schema"
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "D104"]
# Remove D rules from tests
"**/tests/**" = ["D"]

[tool.pytest.ini_options]
log_cli=true

